Bug 972728 - Invalidate more often in basic compositor (r=mattwoodrow)